2006-02-07  Dalibor Topic  <robilad@kaffe.org>

	Fix for #7.

	* configure.ac: check for fastjar and jar. substitute FASTJAR.
	Only use our own built fastjar, if we are not cross-compiling
	and no jar tool can be found.

	* tools/javatools/javalib/Makefile.am,
	tools/gjdoc/javalib/Makefile.am,
	libraries/javalib/gmp-math/Makefile.am,
	libraries/javalib/awt-implementations/kaffe/Makefile.am:
	Use FASTJAR.

2006-02-07  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	Added new stubs.

2006-02-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(finaliserStarted): New global variable to acknowledge the finaliser
	has started.
	(gcInvokeFinaliser): Check whether the finaliser has started.
	(finaliserMan): Reordered a bit to ensure thread safety.

2006-02-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/vmspecific/org/metastatic/jessie/Base64.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/CertificateHandler.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/ConsoleCertificateHandler.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/ConsolePasswordHandler.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/ConsoleTextInput.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/DefaultHandler.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/DialogPasswordHandler.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/EntropySource.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/Jessie.java.in,
	libraries/javalib/vmspecific/org/metastatic/jessie/NullManagerParameters.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/PrivateCredentials.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/SRPManagerParameters.java,
	libraries/javalib/vmspecific/org/metastatic/jessie/SRPTrustManager.java,